# bitcoin_mining_concept

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup_env.ps1  setup_env.sh
src/: main.py  real_mining.py  simulate_mining.py
src/backend/: config_store.py  cpu_info.py  mining.py  mining_controller.py  notify_helper.py  stratum.py  utils.py
src/backend/config/: miner_configs.json
src/frontend/: flet_ui.py
