[project]
name = "bitcoin-mining-concept"
version = "0.1.0"
description = "Bitcoin mining concept"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "psutil",
    "flet[all]>=0.24.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
